# SOP_developablePatcher

./: CMakeLists.txt  README.md  SOP_developablePatcher.C  SOP_developablePatcher.h
include/: converters.cpp  converters.h
libigl/include/igl/: vertex_triangle_adjacency.cpp
libigl/tutorial/403_BoundedBiharmonicWeights/: main.cpp
libigl/tutorial/505_MIQ/: main.cpp
test/: testScene.hipnc  testScene_sphere.hipnc
test/backup/: testScene_bak1.hipnc  testScene_bak2.hipnc  testScene_sphere_bak1.hipnc
